syntax = "proto3";

package ticket;

option go_package = "/service/proto/generated";

service TicketService {
  rpc SubmitRequest (SubmitTicketRequest) returns (TicketReceipt);
  rpc GetDetails (GetDetailsRequest) returns (TicketReceipt);
  rpc GetUsersInSection (GetUsersInSectionRequest) returns (UsersInSection);
  rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse);
  rpc ModifyUserSeat (ModifyUserSeatRequest) returns (ModifyUserSeatResponse);
}

message SubmitTicketRequest {
  string from = 1;
  string to = 2;
  User user = 3;
  int32 pricePaid = 4;
}

message GetDetailsRequest {
  string email = 1;
}

message GetUsersInSectionRequest {
  string section = 1;
}

message RemoveUserRequest {
  string email = 1;
}

message ModifyUserSeatRequest {
  string email = 1;
  string newSeat = 2;
}

message User {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
}

message TicketReceipt {
  string from = 1;
  string to = 2;
  User user = 3;
  int32 pricePaid = 4;
  string allocatedSeat = 5;
}

message UsersInSection {
  string section = 1;
  repeated UserWithSeat users = 2;
}

message UserWithSeat {
  User user = 1;
  string allocatedSeat = 2;
}

message RemoveUserResponse {
  bool success = 1;
  string message = 2;
}

message ModifyUserSeatResponse {
  bool success = 1;
  string message = 2;
}
